fix(web): get repay button if the checkout is failed
